// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Input render component 1`] = `
<DocumentFragment>
  <div
    class="sc-ezzafa ldIjhN"
  >
    <label
      class="sc-hBMUJo bEECIm"
    />
    <input
      class="sc-bYwzuL ezJMEd"
      value=""
    />
    <span
      class="sc-kLojOw cdnhtM"
    />
  </div>
</DocumentFragment>
`;

exports[`[Component]: Input render component with error style 1`] = `
<DocumentFragment>
  <div
    class="sc-ezzafa ldIjhN"
  >
    <label
      class="sc-hBMUJo bEECIm"
    />
    <input
      class="sc-bYwzuL ccNoLT"
      value=""
    />
    <span
      class="sc-kLojOw krTCDQ"
    >
      Help message
    </span>
  </div>
</DocumentFragment>
`;
